--- a/release/app/package.json
+++ b/release/app/package.json
@@ -15,5 +15,6 @@
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts"
   },
   "dependencies": {
+    "node-pty": "^1.0.0"
   }
 }
