--- a/package.json
+++ b/package.json
@@ -97,7 +97,10 @@
     "react": "^18.2.0",
     "react-async": "^10.0.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.16.0",
+    "shell-path": "^3.0.0",
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
