--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "shell-path": "^3.0.0",
+    "uuid": "^9.0.1",
     "xterm": "^5.3.0"
   },
   "devDependencies": {
@@ -117,6 +118,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-test-renderer": "^18.0.1",
     "@types/terser-webpack-plugin": "^5.0.4",
+    "@types/uuid": "^9.0.7",
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
