--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "electron-updater": "^6.1.4",
     "isomorphic-git": "^1.25.1",
     "lodash": "^4.17.21",
+    "nanoid": "^3.3.4",
     "react": "^18.2.0",
     "react-async": "^10.0.1",
     "react-dom": "^18.2.0",
