--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@mui/joy": "^5.0.0-beta.20",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
+    "electron-settings": "^4.0.2",
     "electron-updater": "^6.1.4",
     "isomorphic-git": "^1.25.1",
     "lodash": "^4.17.21",
