--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.29",
     "@mui/joy": "^5.0.0-beta.20",
+    "@octokit/plugin-throttling": "^8.1.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-settings": "^4.0.2",
@@ -85,6 +86,7 @@
     "isomorphic-git": "^1.25.1",
     "lodash": "^4.17.21",
     "nanoid": "^3.3.4",
+    "octokit": "^3.1.2",
     "react": "^18.2.0",
     "react-async": "^10.0.1",
     "react-dom": "^18.2.0",
