--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "shell-path": "^3.0.0",
+    "simple-git": "^3.24.0",
     "uuid": "^9.0.1",
     "xterm": "^5.3.0"
   },
