--- a/package.json
+++ b/package.json
@@ -78,6 +78,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.29",
     "@mui/joy": "^5.0.0-beta.20",
+    "@octokit/auth-oauth-device": "^6",
+    "@octokit/core": "^5.2.0",
+    "@octokit/oauth-methods": "^4",
     "@octokit/plugin-throttling": "^8.1.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
